# pychop

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  chop.py  clean_check_point.sh  float_params.py  guidance.ipynb  guidance2.ipynb  maintainer.md  pyproject.toml  requirements.txt  roundit.py  run_compile.sh  setup.py  setup1.py  setup2.py  temp_chop.py  test.ipynb  test_roundit.py  torch_setup.py  unittests.py
.ipynb_checkpoints/: test-checkpoint.ipynb
docker/: dockerfile
docs/: requirements.txt
examples/: IWSLT.py  MINST_CNN_int.py  batch.sh  example_CNN_fp.py  example_CNN_ft.py  example_CNN_int.py  example_bfp_backends.py  example_gpu.py  example_jax_builtin.py  example_jax_builtin2.py  example_layers.py  example_layers_fp.py  example_layers_int.py  example_mx_backends.py  example_mx_formats.py  example_mx_formats1.py  example_mx_formats2.py  example_mx_formats3.py  example_optim_ft.py  example_optim_int.py  example_optimizers.py  example_optimizers2.py  example_ptq.py  example_random_rounding_cadna.py  fcnn.py  fcnn_chop.py  gmres.py  guidance1.ipynb  guidance2.ipynb  nn1_chop.py  test_builtins.py  test_builtins_linalg.py  tests_test_ptq_jax.py  tests_test_ptq_torch.py  train_nn_int.ipynb  transformer_chop.py  xinye-76021.err
exps/: backend_breakdown.py  backend_breakdown_cpu.py  backend_breakdown_gpu.py  backend_breakdown_plot.py  chop_runtimes_avg.csv  chop_runtimes_avg.mat  chop_runtimes_avg_py.csv  chop_runtimes_avg_py.mat  chunk_speed.py  compare_gfloat.py  compare_gfloat_plot.py  compare_qpytorch.py  data_gen.m  emulation_overhead_on_ir.py  emulation_overhead_on_ir_plot.py  image_class_analysis.py  image_class_train.py  image_class_val.py  image_class_val_chop.py  image_class_val_chop_st.py  image_class_validate_chop.py  image_classifier1.py  image_classifier2.py  image_classifier3.py  image_classifier4.py  image_seg2.py  obj_detect_results.csv  obj_detect_results_fp.csv  obj_detect_results_ft.csv  obj_detect_results_ft_st.csv  pychop_runtimes_avg_np.csv  pychop_runtimes_avg_np2.csv  pychop_runtimes_avg_th.csv  pychop_runtimes_avg_th2.csv  pychop_runtimes_avg_th2_gpu.csv  pychop_runtimes_avg_th_gpu.csv  quantization_results.csv  quantization_results_st.csv  r_cnn_obj_base.py  r_cnn_obj_base_add.py  (+25 more)
pychop/: __init__.py  bfp_formats.py  bitchop.py  cadna_random.py  chop.py  demo_harmonic.py  faultchop.py  fixed_point.py  float_params.py  integer.py  iqlayer.py  layers.py  lightchop.py  math_func.py  mx_formats.py  optimizers.py  ptq.py  qlayer.py  qtrain.py  quant.py  roundit.py  set_backend.py  simulate.py  utils.py
pychop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
recipes/: meta.yaml  unittests.py
tests/: check_bfloat16.py  data1.txt  debug_cadna.py  mathfunc.ipynb  temp.py  test.ipynb  test_backend_speed.ipynb  test_bfloat16.m  test_cadna_final.py  test_cadna_jax.py  test_cadna_rounding.py  test_half.m  test_jax_layers.py  test_lightchop_random_rounding.py  test_q43.m  test_q52.m  test_tensorflow_backend.py  unittests.py  (+1 more)
(+382 files in other folders)
